--- a/Pages/General.xaml
+++ b/Pages/General.xaml
@@ -7,7 +7,7 @@
 
 <VerticalStackLayout Padding="4">
         <Label 
-Text="General"   Margin="8" FontAttributes="Bold" FontSize="25"
+Text="General"   Margin="5" FontAttributes="Bold" FontSize="25"
  VerticalOptions="Center" 
  HorizontalOptions="Start" />
         <Frame BorderColor="{StaticResource Tertiary}"
@@ -49,72 +49,62 @@ HorizontalOptions="Start" />
                     </VerticalStackLayout>
         </HorizontalStackLayout>
                 <Button 
-Text="View Full Profile >" Scale="1" BackgroundColor="{StaticResource Tertiary}" TextColor="Black"
+Text="View Full Profile >" BackgroundColor="{StaticResource Tertiary}" TextColor="Black"
 VerticalOptions="End"  Clicked="AccountPage_Clicked"
 HorizontalOptions="Start"  />
             </StackLayout>
         </Frame>
 
-
-
-      
-       
-
-     
-
-      
             <Label 
-        Text="Settings" FontSize="24" Margin="16" FontAttributes="Bold"
+        Text="Settings" FontSize="24" Margin="10" FontAttributes="Bold"
         VerticalOptions="Center" 
         HorizontalOptions="Start" />
        
-
-
         <Button 
         Text="Trainer Search >" Clicked="TrainerSearch_Clicked" BackgroundColor="{StaticResource Tertiary}" TextColor="Black"
-        VerticalOptions="End"  Margin="2"
+        VerticalOptions="End"   Margin="1"
         HorizontalOptions="Fill" />
 
 
         <Button 
-        Text="Print/Export Data >"  Margin="2" Clicked="DataExportPage_Clicked" BackgroundColor="{StaticResource Tertiary}" TextColor="Black"
+        Text="Print/Export Data >"  Margin="1" Clicked="DataExportPage_Clicked" BackgroundColor="{StaticResource Tertiary}" TextColor="Black"
         VerticalOptions="End" 
         HorizontalOptions="Fill" />
 
         <Button 
 Text="Location Services: ON" BackgroundColor="SpringGreen"  TextColor="Black"
-VerticalOptions="End"  Margin="2"
+VerticalOptions="End"  Margin="1"
 HorizontalOptions="Fill" />
         <Button 
  Text="Sound Effects: ON" BackgroundColor="SpringGreen" TextColor="Black"
- VerticalOptions="End"  Margin="2"
+ VerticalOptions="End"  Margin="1"
  HorizontalOptions="Fill" />
            
             <Button 
         Text="Notifications"
-        VerticalOptions="End"  Margin="2"
+        VerticalOptions="End"   Margin="1"
         HorizontalOptions="Fill" />
             <Button 
        Text="Privacy"
-       VerticalOptions="End"   Margin="2"
+       VerticalOptions="End"   Margin="1"
        HorizontalOptions="Fill" />
             <Button 
  Text="Export Connections"
- VerticalOptions="End"  Margin="2"
+ VerticalOptions="End"   Margin="1"
  HorizontalOptions="Fill" />
             <Button 
  Text="Support"
- VerticalOptions="End"  Margin="2"
+ VerticalOptions="End"   Margin="1"
  HorizontalOptions="Fill" />
 
             <Button
  Text="Log Out" BackgroundColor="Red"
- VerticalOptions="End"   Margin="2"
+ VerticalOptions="End"   Margin="1"
   HorizontalOptions="Fill"  Clicked="ChangeAccount_Clicked" />
 
             <Button
         Text="Deactivate/Delete Account" BackgroundColor="Red"
-        VerticalOptions="End"   Margin="2"
+        VerticalOptions="End"   Margin="1"
          HorizontalOptions="Fill" />
 
 
